--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,7 +111,9 @@ footer.footer a {
 }
 
 .normal-registration,
-.error-registration {
+.error-registration,
+.normal-login,
+.error-login {
   width: 400px;
   height: 30px;
   border-radius: 10px;
@@ -121,7 +123,8 @@ footer.footer a {
   border: 2px solid rgb(30, 30, 50);
 }
 
-input.registration {
+input.registration,
+input.login {
   width: 500px;
   height: 50px;
   outline: 0;
@@ -131,9 +134,15 @@ input.registration {
   background: rgb(50, 255, 50);
   border: 4px solid rgb(30, 255, 30);
   margin: 15px;
-  color: #fafafa;
+  color: white;
 }
 
-.error-registration::-webkit-input-placeholder {
+.error-registration::-webkit-input-placeholder,
+.error-login::-webkit-input-placeholder {
   color: rgb(240, 50, 50);
+}
+
+input.checkbox {
+  width: 25px;
+  height: 25px;
 }
