--- a/templates/book.html
+++ b/templates/book.html
@@ -14,7 +14,7 @@
 <p>
     {% if rsv  %}
         {% if rsv.is_read %}
-            <p><b>Вы уже прочитали эту кингу</b></p>
+            <p><b>Вы уже прочитали эту книгу</b></p>
         {% else %}
             <p><b>Вы читаете эту книгу</b></p>
         {% endif %}
